--- a/workers/index.html
+++ b/workers/index.html
@@ -32,7 +32,7 @@
                     <option value="highSchool">High school</option>
                 </select><br>
             </div>
-            <fieldset class="form-group>
+            <fieldset class="form-group">
             <input type="button" value="Add worker" onclick="addWorker()" class="btn btn-success"><br><br>
             <input type="button" value="Show workers" onclick="showWorkers()" class="btn btn-success">
             <input type="button" value="Show workers2" onclick="showWorkers2()" class="btn btn-success">
