--- a/slike/index.html
+++ b/slike/index.html
@@ -17,10 +17,16 @@
 </head>
 
 <body>
+    <div id="pictures">
+
+    </div>
+    <p></p>
+    <input type="button" id="btnPrevious" value="Prethodna slika">
+    <input type="button" id="btnStart" value="Pocetna slika">
+    <input type="button" id="btnNext" value="Nova slika">
 
 
-  
-   
+
     <script src="javascript/script.js"></script>
 </body>
 
